--- a/src/containers/card.css
+++ b/src/containers/card.css
@@ -19,7 +19,7 @@
 }
 
 /* Responsive columns */
-@media screen and (max-width: 600px) {
+@media all and (max-width: 600px) {
   .column {
     width: 100%;
     display: block;
